# mwm

./: .gitignore  CMakeLists.txt  config.cpp  install.sh
include/: classes.hpp  config.hpp  include.hpp  mwm.hpp  utils.hpp
include/layouts/: default.hpp
src/: main.cpp  mwm.cpp  utils.cpp
